<resources>
    <string name="app_name">Geosurf</string>
    <string name="button_addGeosurf">Add Surf Spot</string>
    <string name="hint_geosurfTitle">Surf Spot Title</string>
    <string name="hint_geosurfDescription">Description:  </string>
    <string name="hint_geosurfAbilityLevel">SurfSpot Ability Level</string>
    <string name="hint_geosurfDate">Date</string>
    <string name="menu_addGeosurf">Add</string>
    <string name="menu_saveGeosurf">Save</string>
    <string name="menu_cancelGeosurf">Cancel</string>
    <string name="enter_geosurf_title"> Please enter a SurfSpot Title </string>
    <string name="save_geosurf"> Save Surf Spot </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_geosurf_image">Select surf spot image</string>
    <string name="change_geosurf_image">Change surf spot image</string>
    <string name="button_location">Add Location</string>
    <string name="title_activity_map">Surf Map</string>
    <string name="menu_deleteGeosurf">Delete</string>
    <string name="selected_abilityLevel">Ability Level:</string>
    <string name="update_date">Change Date</string>
    <string name="geosurf_rating_header">Rate SurfSpot</string>
    <string name="warning_incorrect_credentials">Incorrect Login Credentials</string>
    <string name="login_message">Sign in</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_register">Sign Up</string>
    <string name="register_message">Create a new account</string>
    <string name="create_account">Create Account</string>
    <string name="new_user">Create an account?</string>
    <string name="loggedIn">You are logged in!</string>
    <string name="logout">Logout</string>
    <string name="image">image</string>
    <string name="button_geosurfList">Manage your SurfSpots</string>
    <string name="login_success">Logged In</string>
    <string name="menu_map">Map</string>
    <string name="menu_home">Home</string>
    <string name="menu_searchGeosurf">Search</string>
    <string name="search_hint">Search Surfspot by County</string>
    <string name="title_activity_login"> Signup/Login to Geosurf</string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>





    <string-array name="abilityLevels">
        <item>Select Ability Level advised for this Surfspot</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Pro</item>
    </string-array>
    <string name="title_activity_geosurf_maps">Map of All Surfspots</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_geosurf_county">Enter County</string>
    <string name="select_date">Select Date</string>
    <string name="hint_geosurfCounty">Enter County</string>
    <string name="button_county">County</string>
    <string name="warning_enter_credentials">Please enter email and password</string>
</resources>